# fis_data

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: excel-parser-plan.md  pcr-excel-parser-plan.md
src/fis_data/: __init__.py  cli.py  db.py  schema.py
src/fis_data/etl/: __init__.py  contracts.py  control.py  excel_parse_job.py  excel_profiles.py  excel_registry.py  file_registry.py  ingest_excel.py  ingest_text.py  materialization.py  materialization_registry.py  microb_parse_job.py  pcr_analytics.py  pcr_excel_parser.py  pcr_materializer.py  pcr_melting.py  repos.py  types.py
src/fis_data/etl/parse/: __init__.py  header_index.py  microb_parser.py
tests/: test_cli.py  test_ingest_text.py  test_materialization.py  test_microb_parse_job.py  test_microb_parser.py  test_pcr_analytics.py
