[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fis-data"
version = "0.1.0"
description = "Python data management repository for FIS."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1,<9",
    "python-dotenv>=1.0,<2",
    "SQLAlchemy>=2.0,<3",
    "numpy>=1.26,<3",
    "scipy>=1.10,<2",
]

[project.scripts]
fis-data = "fis_data.cli:cli"

[project.optional-dependencies]
dev = [
    "openpyxl>=3.1,<4",
    "pytest>=8",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["microb_db", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
